# phillipa

./: .gitignore  .isort.cfg  Dockerfile  LICENSE  Makefile  README.md  bad.txt  docker-compose.yml  good.txt  phillipa.py  pyproject.toml
phillipa/: __init__.py  __main__.py  app.py  emoji.py  logging.py  phillipa.py  trigger.py  utils.py  web.py
resources/: bad.txt  good.txt  trains.txt
